test/errors/scopes2.input.asm

* = $801

foo: {
    jmp .local_label
.local_label:
.local_label: ; duplicate
    rts
}
